@@ -1,5 +1,10 @@
 2007-09-25  Dan Williams  <dcbw@redhat.com>
 
+	* src/menu-items.c
+		- (wired_menu_item_new): Dim wired items based on carrier state
+
+2007-09-25  Dan Williams  <dcbw@redhat.com>
+
 	* src/vpn-properties/nm-vpn-properties.c
 		- Fix various errors and warnings
 
